--- a/.github/workflows/Build ZIP and MCPACK.yml
+++ b/.github/workflows/Build ZIP and MCPACK.yml
@@ -15,7 +15,7 @@ jobs:
        uses: thedoctor0/zip-release@master
        with:
          type: 'zip'
-         filename: 'Sidebar_latest.zip'
+         filename: 'MCPE-Lunar-Client-Dot-Crosshair_latest.zip'
          exclusions: '*.git* ./build/ README.md report.txt'
 
      - name: Move to "build" directory
