--- a/.github/workflows/Build ZIP and MCPACK.yml
+++ b/.github/workflows/Build ZIP and MCPACK.yml
@@ -42,6 +42,7 @@ jobs:
        run: |
           git config --global user.name '${{ secrets.git_username }}'
           git config --global user.email '${{ secrets.git_email }}'
+          git init
           git add -A
           git commit -am "Made new build"
           git push -u origin master         
