--- a/.github/workflows/Build ZIP and MCPACK.yml
+++ b/.github/workflows/Build ZIP and MCPACK.yml
@@ -44,4 +44,4 @@ jobs:
           git config --global user.email '${{ secrets.git_email }}'
           git add -A
           git commit -am "Made new build"
-          git push         
+          git push -u origin imgbot         
