--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "format_version": 2,
   "header": {
-    "description": "§b§l Lunar Client Dot Crosshair Made by §aMinionguyjpro",
+    "description": "§b§l MCPE Lunar Client Crosshairs Made by §aMinionguyjpro",
     "min_engine_version": [
       1,
       16,
       20
     ],
-    "name": "Lunar Client Dot Crosshair",
+    "name": "MCPE Lunar Client Crosshair",
     "uuid": "2ff0cddd-ffa9-4883-b754-86b4ae5b1309",
     "version": [
       1,
@@ -17,7 +17,7 @@
   },
   "modules": [
     {
-      "description": "§b§l Lunar Client Dot Crosshair Made by §aMinionguyjpro",
+      "description": "§b§l MCPE Lunar Client Crosshairs Made by §aMinionguyjpro",
       "type": "resources",
       "uuid": "3c9a4043-33a5-40a9-b382-dc52bcb5df3e",
       "version": [
@@ -30,8 +30,28 @@
   "subpacks": [
   {  
      "folder_name": "crosshair0",
-     "name": "Dot Crosshair",
-     "memory_tier": 1
-     }
-  ]    
+     "name": "LC Crosshair: Cross",
+     "memory_tier": 0
+  },
+  {
+     "folder_name": "crosshair1",
+     "name": "LC Crosshair: Cross With Dot",
+     "memory_tier": 0
+  },
+  { 
+     "folder_name": "crosshair2",
+     "name": "LC Crosshair: Cubic",
+     "memory_tier": 0
+  },
+  {
+     "folder_name": "crosshair3",
+     "name": "LC Crosshair: Cubic With Dot",
+     "memory_tier": 0
+  },
+  {
+     "folder_name": "crosshair4",
+     "name": " LC Crosshair : Arrow",
+     "memory_tier": 0
+    }  
+  ]
 }
