--- a/.github/workflows/Build_pack_and_publish_to_Curseforge.yml
+++ b/.github/workflows/Build_pack_and_publish_to_Curseforge.yml
@@ -45,7 +45,7 @@ jobs:
           git init
           git add -A
           git commit -am "Made new build"
-          git push -u origin main         
+          git push -u origin ${{ github.ref_name }}         
           
      - name: "Upload to CurseForge"
        uses: itsmeow/curseforge-upload@v3
