--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -47,15 +47,12 @@ jobs:
           git commit -am "Made new build"
           git push -u origin ${{ github.ref_name }}         
  publish: 
+    needs: build
     runs-on: ubuntu-latest
     steps:
-     - name: Wait for build to succeed
-       uses: fountainhead/action-wait-for-check@v1.1.0
-       id: wait-for-build
-       with:
-         token: ${{ secrets.GITHUB_TOKEN }}
-         checkName: build
-         ref: ${{ github.event.pull_request.head.sha || github.sha }}
+     - name: Clone repository
+       uses: actions/checkout@v3
+       
      - name: "Upload to CurseForge"
        uses: itsmeow/curseforge-upload@v3
        with:
