--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,3 +4,6 @@ targets:
       - manifest.json
     file: /languages/%two_letters_code%/manifest.json
     format: xliff
+files:
+  - source: /*.json
+    translation: /languages/%two_letters_code%/%original_file_name%
